--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ inference_test_output
 
 *.jpg
 *.png
-*.txt
 *.json
 *.diff
 
@@ -44,3 +43,7 @@ wheels/
 /datasets
 /projects/*/datasets
 /models
+
+
+#env
+/env/*
